--- a/css/stage.css
+++ b/css/stage.css
@@ -94,13 +94,10 @@ html, body {
     height: 64px;
     background-color: rgba(243, 242, 242, 0.553);
     border-radius: 100px;
-    position: absolute;
-    top: 500px;
-    left: 50%;
-    transform: translateX(-50%);
     width: 200px;
     display: flex;
     border-color: transparent;
+    margin-top: 100px;
 }
 
 .container:hover {
