added recommended composers section to results page

--- a/css/home.css
+++ b/css/home.css
@@ -20,7 +20,7 @@ body {
 
 #title {
     position: relative;
-    font-family: 'circular';
+    font-family: 'test';
     font-size: 150px;
     color: rgba(255, 255, 255, 0.9);
 }
