--- a/css/results.css
+++ b/css/results.css
@@ -36,7 +36,7 @@ body {
 #results {
     position: relative;
     display: inline-block;
-    text-align: left;
+    text-align: center;
     font-family: 'circular';
     font-size: 35px;
     color: rgba(255, 255, 255, 0.9);
@@ -51,7 +51,7 @@ body {
 #recommendedComposers {
     position: relative;
     display: inline-block;
-    text-align: right;
+    text-align: center;
     font-family: 'circular';
     font-size: 35px;
     color: rgba(255, 255, 255, 0.9);
