--- a/css/stage.css
+++ b/css/stage.css
@@ -134,4 +134,9 @@ html, body {
     color: #ffffff;
     font-family: 'circular';
     font-size: 20px;
+    background-color: rgba(0, 0, 0, 0.14);
+    width: 60px;
+    height: 28px;
+    padding: 5px;
+    border-radius: 20px;
 }
