--- a/css/stage.css
+++ b/css/stage.css
@@ -133,10 +133,14 @@ html, body {
     align-items: center;
     color: #ffffff;
     font-family: 'circular';
-    font-size: 20px;
-    background-color: rgba(0, 0, 0, 0.14);
+    font-size: 18px;
+    background-color: rgba(0, 0, 0, 0.069);
     width: 60px;
-    height: 28px;
+    height: 24px;
     padding: 5px;
     border-radius: 20px;
+}
+
+.sides {
+    mix-blend-mode: hard-light;
 }
